# genpay

./: Cargo.toml  Darwin-ARM64-LLVM-INSTALL.txt  Dockerfile  README.md  a.pay  genpay.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-llvm.yml  ci_cd.yaml
.zed/: settings.json
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  tokens.rs
crates/linker/: Cargo.toml
crates/linker/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: arrays.rs  enums.rs  expressions.rs  functions.rs  lib.rs  operations.rs  statement.rs  statements.rs  types.rs  value.rs  values.rs
crates/shared/src/: lib.rs  shared_types.rs  tokens.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: error.rs  lib.rs  tokens.rs
src/: main.rs
