[package]
name = "genpay"
version = "0.1.0"
edition = "2024"

[dependencies]
# This links your local crates to your main client
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
semantic = { path = "crates/semantic" }
codegen = { path = "crates/codegen" }
linker = { path = "crates/linker" }

[workspace]
members = [
    "crates/lexer",
    "crates/parser",
    "crates/semantic",
    "crates/codegen",
    "crates/linker",
]

[workspace.dependencies]
cranelift-codegen = "0.129.1"
target-lexicon = "0.13.5"
# Add these for linking/module support
cranelift-module = "0.129.1"
cranelift-object = "0.129.1"
# Inkwell version 0.8.0 is the current release as of early 2026 
# that officially supports LLVM 21.
inkwell = { version = "0.8.0", features = ["llvm21-1"] }

# If it need the raw C API bindings
llvm-sys = "211.0.0"


resolver = "3"
