[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
# Inherit from workspace and make them OPTIONAL here too
inkwell = { workspace = true, optional = true }
llvm-sys = { workspace = true, optional = true }
cranelift-codegen = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-object = { workspace = true, optional = true }
target-lexicon = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }

[features]
# Define these features inside the codegen crate
use_llvm = ["dep:inkwell", "dep:llvm-sys"]
use_cranelift = [
    "dep:cranelift-codegen",
    "dep:cranelift-module",
    "dep:cranelift-object",
    "dep:target-lexicon"
]
# Define just to run performance tests with mimalloc
use_mimalloc = ["dep:mimalloc"]
